<resources>
    <string name="app_name">InClassExamples_W19</string>
    <string name="Hello">Hello world!</string>
    <string name="button">a button string</string>
    <string name="button2">button 2</string>
    <string name="button3">button 3</string>
    <string name="previousPage">Go To Previous Page</string>

    <string name="firstPage">This is the First Page</string>
    <string name="secondPage">This is the Second Page</string>
    <string name="thirdPage">This is the Third Page</string>

    <string name="goToSecondPage">Go To Second Page</string>
    <string name="goToThirdPage">Go To Third Page</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="insert">Insert</string>
    <string name="typeHere">Type here</string>
    <string name="typeHereToSave">Type something here and it will be saved for next time</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="ID">id</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="aButton">Button</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_example">NavigationExample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Branch">Branch 1</string>

</resources>
