<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/firstPage"/>

    <Button android:id="@+id/nextPageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToSecondPage" />
    <TextView
        android:id="@+id/key_text"
        android:text="Type something below:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/value_text"
        android:hint="@string/typeHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/thirdPageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToThirdPage" />

</LinearLayout>